--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title>Kiranmai Ponakala</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 	<body>
 		<nav>
@@ -17,7 +17,7 @@
     		<div class="blurb">
         		<h1>Hi there, I'm Kiranmai!</h1>
 				<p> I'm a Masters student studying Computer Science at USC. I'm interested in Full stack web development roles.
-        <a href="https://www.linkedin.com/in/kiranmai-ponakala/">Check out my Linkedin here.</a></p>
+        Check out my Linkedin <a href="https://www.linkedin.com/in/kiranmai-ponakala/">here</a>.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
