--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <h1>Kiranmai Ponakala</h1>
+            <h2>Computer Science student @ USC</h2>
+            <a href="https://www.linkedin.com/in/kiranmai-ponakala/" class="btn-rounded-white">Linkedin</a>
         </div>
         <!-- End #lead-content -->
 
@@ -73,9 +73,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+			    I'm a Masters student studying Computer Science at the University of Southern California. 
+			    <br> 
+			    I'm interested in Full stack web development roles as well as back-end development.
                     </p>
                 </div>
             </div>
@@ -86,28 +86,44 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+		
+	  <div data-date="Current">
+                <h3>USC Center for Systems and Software Engineering</h3>
+                <h4>Web Developer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+			<ul>
+			<li>Working on project UMLx: a Web-based analytics tool to support automated analysis of UML diagrams.</li>
+			<li>Primarily involved in end-to-end testing, integration, and deployment of the application.</li>
+			<li>Technologies: JavaScript, HTML, CSS, Python, RESTful web services, MongoDB database, Selenium testing, Git, AWS. <li>
+		  	</ul>
+		 </p>
+            </div>
+		
+            <div data-date="January 2017 - July 2017">
+                <h3>Honeywell</h3>
+                <h4>Software Engineering Intern</h4>
+                <p>
+			<ul>
+			<li> Integrated Flexera with Desktop Tools for Software License Management using Java. </li>
+			<li> Developed nine use cases for Desktop License Management of the Honeywell Operating System(HOS). </li>
+			<li> Documented the proof of content for all the nine use cases for future reference. </li>
+			<li> Technologies: Java </li>
+		    	</ul>
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="May 2016 – July 2016">
+                <h3>Indian Space Research Organization</h3>
+                <h4>Intern - Project Student</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
-
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+			<ul>
+				<li> Implemented Image Segmentation of Remote Sensing images obtained from 
+					satellite database using Fuzzy C-Means algorithm using Java Advanced Imaging Library 
+					saving space to store the original images <li>
+				<li> Worked in the Microwave Remote Sensing and Global Data Processing group</li>
+				<li>Technologies: Java</li>
+		    	</ul>
+		</p>
             </div>
         </div>
     </div>
@@ -116,29 +132,24 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>University of Southern California</h3>
+            <span class="education-date">2017 - 2019</span>
+            <h4>Masters in Computer Science</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+		    <ul>
+			    <li>Coursework: Algorithms, Mobile game development, Web Technologies, Databases
+		    </ul>
             </p>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>JNTU Hyderabad, India</h3>
+            <span class="education-date">2013 - 2017</span>
+            <h4>Bachelors in Computer Science and Engineering</h4>
             <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
+		    <li>Won <b>Best Website Design</b> in Web Development and Design Workshop at JNTU Hyderabad</li>
+		    <li>Workshops and Training: Web Development, Cloud Computing</li>
             </ul>
         </div>
         <!-- End .education-block -->
