--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Kiranmai Ponakala</h1>
             <h2>Computer Science student @ USC</h2>
-            <a href="https://www.linkedin.com/in/kiranmai-ponakala/" class="btn-rounded-white">Linkedin</a>
+            <a href="#projects" class="btn-rounded-white">See Projects</a>
         </div>
         <!-- End #lead-content -->
 
@@ -200,46 +200,32 @@
         <h2 class="heading">Skills</h2>
         <ul>
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+		<li>HTML</li>
+		<li>CSS</li>
+		<li>AJAX</li>
+		<li>Bootstrap</li>
+		<li>jQuery</li>
+		<li>Java</li>
+		<li>Python</li>
+		<li>PHP</li>
+		<li>RESTful web services</li>
+		<li>MongoDB</li>
+		<li>MySQL</li>
+		<li>Oracle</li>
+		<li>Git</li>
+		<li>Linux / UNIX</li>
+		<li>AWS</li>
+		<li>Selenium testing</li>
         </ul>
     </div>
     <!-- End #skills -->
 
     <div id="contact">
         <h2>Get in Touch</h2>
-        <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
-                <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
-                <textarea name="message" placeholder="Your message" required></textarea>
-                <button type="submit">Send</button>
-            </form>
-        </div>
-        <!-- End #contact-form -->
+        <ul>
+		<li><a href="https://www.linkedin.com/in/kiranmai-ponakala/">Linkedin</a></li>
+		<li><a href="mailto:kiran.ponakala@gmail.com">Email</a></li>
+	    </ul>
     </div>
     <!-- End #contact -->
 
@@ -248,7 +234,8 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 YOUR NAME
+                        Copyright &copy; 2017 Kiranmai Ponakala <br>
+			<a href="https://github.com/RyanFitzgerald">Devportfolio</a>
                     </p>
                 </div>
                 <div class="col-sm-2 top">
