--- a/index.html
+++ b/index.html
@@ -49,19 +49,12 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Kiranmai Ponakala</h1>
-            <h2>Computer Science student @ USC</h2>
+            <h2>Programmer and Computer Science student at USC</h2>
             <a href="#projects" class="btn-rounded-white">See Projects</a>
         </div>
         <!-- End #lead-content -->
 
         <div id="lead-overlay"></div>
-
-        <div id="lead-down">
-            <span>
-                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-            </span>
-        </div>
-        <!-- End #lead-down -->
     </div>
     <!-- End #lead -->
 
@@ -91,11 +84,9 @@
                 <h3>USC Center for Systems and Software Engineering</h3>
                 <h4>Web Developer</h4>
                 <p>
-			<ul>
-			<li>Working on project UMLx: a Web-based analytics tool to support automated analysis of UML diagrams.</li>
-			<li>Primarily involved in end-to-end testing, integration, and deployment of the application.</li>
-			<li>Technologies: JavaScript, HTML, CSS, Python, RESTful web services, MongoDB database, Selenium testing, Git, AWS. <li>
-		  	</ul>
+			Working on project UMLx: a Web-based analytics tool to support automated analysis of UML diagrams.<br>
+			Primarily involved in end-to-end testing, integration, and deployment of the application.<br>
+			<b>Technologies: JavaScript, HTML, CSS, Python, RESTful web services, MongoDB database, Selenium testing, Git, AWS. </b>
 		 </p>
             </div>
 		
@@ -103,12 +94,9 @@
                 <h3>Honeywell</h3>
                 <h4>Software Engineering Intern</h4>
                 <p>
-			<ul>
-			<li> Integrated Flexera with Desktop Tools for Software License Management using Java. </li>
-			<li> Developed nine use cases for Desktop License Management of the Honeywell Operating System(HOS). </li>
-			<li> Documented the proof of content for all the nine use cases for future reference. </li>
-			<li> Technologies: Java </li>
-		    	</ul>
+			Integrated Flexera with Desktop Tools for Software License Management using Java. <br>
+			Developed nine use cases for Desktop License Management of the Honeywell Operating System(HOS). <br>
+			<b> Technologies: Java </b>
                 </p>
             </div>
 
@@ -116,13 +104,10 @@
                 <h3>Indian Space Research Organization</h3>
                 <h4>Intern - Project Student</h4>
                 <p>
-			<ul>
-				<li> Implemented Image Segmentation of Remote Sensing images obtained from 
+				 Implemented Image Segmentation of Remote Sensing images obtained from 
 					satellite database using Fuzzy C-Means algorithm using Java Advanced Imaging Library 
-					saving space to store the original images <li>
-				<li> Worked in the Microwave Remote Sensing and Global Data Processing group</li>
-				<li>Technologies: Java</li>
-		    	</ul>
+					saving space to store the original images <br>
+				<b>Technologies: Java</b>
 		</p>
             </div>
         </div>
