--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
             <ul>
 		    <li>Won <b>Best Website Design</b> in Web Development and Design Workshop at JNTU Hyderabad</li>
 		    <li>Workshops and Training: Web Development, Cloud Computing</li>
+		    <li>Coursework: Software Engineering, Advanced Data Structures, Object Oriented Programming with C++, Java Programming Lab, Computer Networks, Distributed Computing</li>
             </ul>
         </div>
         <!-- End .education-block -->
