--- a/index.html
+++ b/index.html
@@ -85,9 +85,11 @@
                 <h4>Web Developer</h4>
                 <p>
 		  <div class="education-block">
-			Working on project UMLx: a Web-based analytics tool to support automated analysis of UML diagrams.<br>
-			Primarily involved in end-to-end testing, integration, and deployment of the application.<br>
-			<b>Technologies: JavaScript, HTML, CSS, Python, RESTful web services, MongoDB database, Selenium testing, Git, AWS. </b>
+			  <ul>
+			<li>Working on project UMLx: a Web-based analytics tool to support automated analysis of UML diagrams.</li>
+			<li>Primarily involved in end-to-end testing, integration, and deployment of the application.</li>
+			<li> <b>Technologies: JavaScript, HTML, CSS, Python, RESTful web services, MongoDB database, Selenium testing, Git, AWS. </b></li>
+				  </ul>
 		  </div>
 		</p>
             </div>
@@ -97,9 +99,11 @@
                 <h4>Software Engineering Intern</h4>
                 <p>
 		    <div class="education-block">
-			Integrated Flexera with Desktop Tools for Software License Management using Java. <br>
-			Developed nine use cases for Desktop License Management of the Honeywell Operating System(HOS). <br>
-			<b> Technologies: Java </b>
+			    <ul>
+			<li>Integrated Flexera with Desktop Tools for Software License Management using Java. </li>
+			<li>Developed nine use cases for Desktop License Management of the Honeywell Operating System(HOS). </li>
+				    <li><b> Technologies: Java </b></li>
+			    </ul>
 		    </div>
                 </p>
             </div>
@@ -109,10 +113,12 @@
                 <h4>Intern - Project Student</h4>
                 <p>
 		  <div class="education-block">
-				 Implemented Image Segmentation of Remote Sensing images obtained from 
+			  	<ul>
+				 <li>Implemented Image Segmentation of Remote Sensing images obtained from 
 					satellite database using Fuzzy C-Means algorithm using Java Advanced Imaging Library 
-					saving space to store the original images <br>
-				<b>Technologies: Java</b>
+					saving space to store the original images </li>
+				<li><b>Technologies: Java</b><li>
+					</ul>
 		  </div>
 		</p>
             </div>
