--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Kiranmai Ponakala</h1>
-            <h2>Programmer and <br> Computer Science student at USC</h2>
+            <h2>Programmer <br> Computer Science student at USC</h2>
             <a href="#projects" class="btn-rounded-white">See Projects</a>
         </div>
         <!-- End #lead-content -->
@@ -117,8 +117,8 @@
 				 <li>Implemented Image Segmentation of Remote Sensing images obtained from 
 					satellite database using Fuzzy C-Means algorithm using Java Advanced Imaging Library 
 					saving space to store the original images </li>
-				<li><b>Technologies: Java</b><li>
-					</ul>
+				<li><b>Technologies: Java</b></li>
+				</ul>
 		  </div>
 		</p>
             </div>
