--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="col-md-4">
                     <h2 class="heading">About Me</h2>
                 </div>
-                <div class="col-md-8">
+                <div >
                     <p>
 			    I'm a Masters student studying Computer Science at the University of Southern California. 
 			    <br> 
@@ -84,7 +84,7 @@
                 <h3>USC Center for Systems and Software Engineering</h3>
                 <h4>Web Developer</h4>
                 <p>
-		  <div class="education-block">
+		  <div >
 			  <ul>
 			<li>Working on project UMLx: a Web-based analytics tool to support automated analysis of UML diagrams.</li>
 			<li>Primarily involved in end-to-end testing, integration, and deployment of the application.</li>
@@ -98,7 +98,7 @@
                 <h3>Honeywell</h3>
                 <h4>Software Engineering Intern</h4>
                 <p>
-		    <div class="education-block">
+		    <div >
 			    <ul>
 			<li>Integrated Flexera with Desktop Tools for Software License Management using Java. </li>
 			<li>Developed nine use cases for Desktop License Management of the Honeywell Operating System(HOS). </li>
@@ -112,7 +112,7 @@
                 <h3>Indian Space Research Organization</h3>
                 <h4>Intern - Project Student</h4>
                 <p>
-		  <div class="education-block">
+		  <div >
 			  	<ul>
 				 <li>Implemented Image Segmentation of Remote Sensing images obtained from 
 					satellite database using Fuzzy C-Means algorithm using Java Advanced Imaging Library 
