--- a/index.html
+++ b/index.html
@@ -183,10 +183,11 @@
                         <p>
 				<b> Technologies: JavaScript, HTML, CSS </b>
 				<br>
-				Website for a local restaurant.
 				
                         </p>
                         <a href="https://pkiranmai.github.io/local-restaurant-website/">View Project</a>
+			<br>
+			<a href="https://github.com/pkiranmai/local-restaurant-website">View Source Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -203,6 +204,8 @@
 				<b> Technologies: JavaScript, HTML, CSS </b>
                         </p>
                         <a href="https://pkiranmai.github.io/trucking-data-website/">View Project</a>
+			<br>
+			<a href="https://github.com/pkiranmai/trucking-data-website">View Source Code</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
