--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info" style="float:center">
-                        <h3>Travel and Entertainment Search</h3>
+                        <h3>Travel and Entertainment <br> Search Website</h3>
                         <p>
-				<b> Technologies: PHP, Google Places API and Google Maps API, JavaScript, AJAX, jQuery, HTML, CSS, Bootstrap </b>
+				<b> Technologies: PHP, Google Places API and Google Maps API, <br> JavaScript, AJAX, jQuery, <br> HTML, CSS, Bootstrap </b>
                         </p>
                     </div>
                     <!-- End .project-info -->
