--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@
                     <div class="project-info" style="width: 60%; float:right">
                         <h3>Algorithms and Data structures</h3>
                         <p>
+				Topics: Arrays, Bit Manipulation, Binary Search Trees, <br>
+				Graphs, Heaps and Priority Queues, Linked Lists, Strings <br>
 				<b> Technologies: Java</b>
                         </p>
                         <a href="https://github.com/pkiranmai/algorithms-and-data-structures">View Code</a>
