--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
                     <div class="project-info" style="width: 60%; float:right">
                         <h3>Travel and Entertainment <br> Search Website</h3>
                         <p>
+				Website to search for places for travel and entertainment <br> using the Google Places API <br>
+				Results show places with reviews, photos, and directions on maps <br>
 				<b> Technologies: PHP, Google Places API and Google Maps API, <br> JavaScript, AJAX, jQuery, <br> HTML, CSS, Bootstrap </b>
                         </p>
                     </div>
@@ -235,8 +237,8 @@
                     <div class="project-info" style="width: 60%; float:right">
                         <h3>Algorithms and Data structures</h3>
                         <p>
-				Topics: Arrays, Bit Manipulation, Binary Search Trees, <br>
-				Graphs, Heaps and Priority Queues, Linked Lists, Strings <br>
+				Arrays, Bit Manipulation, Binary Search Trees, <br>
+				Graphs, Priority Queues, Linked Lists, Strings <br>
 				<b> Technologies: Java</b>
                         </p>
                         <a href="https://github.com/pkiranmai/algorithms-and-data-structures">View Code</a>
