--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
                     <div class="project-info" style="width: 60%; float:right">
                         <h3>Travel and Entertainment <br> Search Website</h3>
                         <p>
-				Website to search for places for travel and entertainment <br> using the Google Places API <br>
-				Results show places with reviews, photos, and directions on maps <br>
-				<b> Technologies: PHP, Google Places API and Google Maps API, <br> JavaScript, AJAX, jQuery, <br> HTML, CSS, Bootstrap </b>
+				Website to search for places for travel and entertainment <br>
+				Results show places with reviews, photos, directions on maps <br>
+				<b> Technologies: PHP, JavaScript, AJAX, jQuery, <br> HTML, CSS, Bootstrap </b>
                         </p>
                     </div>
                     <!-- End .project-info -->
