--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         <p>
 				<b> Technologies: Unity, C#, Git </b>
                         </p>
-                        <a href="https://www.youtube.com/watch?v=B10hbX87Y7k">View Project</a>
+                        <a href="https://www.youtube.com/watch?v=hpvhEVK9pb0">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
