added summer internship

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <p>
 			    I'm a Masters student studying Computer Science at the University of Southern California. 
 			    <br> 
-			    I'm interested in Full stack web development roles as well as back-end development.
+			    I'm interested in Full-stack web development as well as back-end development roles.
                     </p>
                 </div>
             </div>
@@ -80,7 +80,19 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
 		
-	  <div data-date="Current">
+	<div data-date="June 2018 - August 2018">
+                <h3>Learning Objects - Cengage</h3>
+                <h4>Software Engineering Intern</h4>
+                <p>
+		  <div class="education-block">
+			  <ul>
+				<li>Full-stack development in the Learning Objects Platform Team using React, JavaScript, HTML, CSS, Scala</li>
+			  </ul>
+		  </div>
+		</p>
+            </div>
+		
+	  <div data-date="January 2018 - May 2018">
                 <h3>USC Center for Systems and Software Engineering</h3>
                 <h4>Web Developer</h4>
                 <p>
@@ -255,6 +267,7 @@
         <h2 class="heading">Skills</h2>
         <ul>
             <li>JavaScript</li>
+		<li>React</li>
 		<li>HTML</li>
 		<li>CSS</li>
 		<li>AJAX</li>
