--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <h4>Masters in Computer Science</h4>
             <p>
 		    <ul>
-			    <li>Coursework: Algorithms, Mobile game development, Web Technologies, Databases
+			    <li>Coursework: Operating Systems, Algorithms, Mobile game development, Web Technologies, Databases
 		    </ul>
             </p>
         </div>
