added travel website code url

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <p>
 		  <div class="education-block">
 			  <ul>
-				<li>Full-stack development in the Learning Objects Platform Team using React, JavaScript, HTML, CSS, Scala</li>
+				<li>Full-stack web development in the Learning Objects Platform Team using React, JavaScript, HTML, CSS, Scala</li>
 			  </ul>
 		  </div>
 		</p>
@@ -178,9 +178,13 @@
                     <div class="project-info" style="width: 60%; float:right">
                         <h3>Travel and Entertainment <br> Search Website</h3>
                         <p>
-				Website to search for places for travel and entertainment <br>
-				Results show places with reviews, photos, directions on maps <br>
+				Website to search for places for travel and entertainment.  <br>
+				Results show places with reviews, photos, directions on maps.  <br>
 				<b> Technologies: PHP, JavaScript, AJAX, jQuery, <br> HTML, CSS, Bootstrap </b>
+				
+				<br>
+				<a href="https://github.com/pkiranmai/travel-entertainment-search">View Source Code</a>
+				
                         </p>
                     </div>
                     <!-- End .project-info -->
