--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         <p>
 				Website to search for places for travel and entertainment.  <br>
 				Results show places with reviews, photos, directions on maps.  <br>
-				<b> Technologies: PHP, JavaScript, AJAX, jQuery, <br> HTML, CSS, Bootstrap </b>
+				<b> Technologies: Angular JS, Node JS, JavaScript, AJAX, <br> HTML, CSS, Bootstrap </b>
 				
 				<br>
 				<a href="https://github.com/pkiranmai/travel-entertainment-search">View Source Code</a>
